[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/logo2.png" type="Texture" id=1]
[ext_resource path="res://Assets/ground.png" type="Texture" id=2]
[ext_resource path="res://Objects/WinBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Objects/Background.tscn" type="PackedScene" id=4]
[ext_resource path="res://HomeScreen.gd" type="Script" id=5]
[ext_resource path="res://Assets/Fonts/MenuButton.tres" type="DynamicFont" id=6]

[node name="HomeScreen" type="Node2D"]
script = ExtResource( 5 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 160, 90 )
current = true
limit_smoothed = true
smoothing_enabled = true
smoothing_speed = 10.0

[node name="CanvasLayer" type="CanvasLayer" parent="Camera2D"]

[node name="Transition" parent="Camera2D/CanvasLayer" instance=ExtResource( 3 )]
visible = false
z_index = 20
script = null

[node name="ColorRect" parent="Camera2D/CanvasLayer/Transition/CanvasLayer" index="0"]
visible = false

[node name="TitleScreen" type="Control" parent="Camera2D/CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Camera2D/CanvasLayer/TitleScreen"]
margin_left = 8.0
margin_top = 16.0
margin_right = 168.0
margin_bottom = 70.0
custom_fonts/font = ExtResource( 6 )
text = "Deal With 
The Devil"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGame" type="Button" parent="Camera2D/CanvasLayer/TitleScreen"]
margin_left = 12.0
margin_top = 91.0
margin_right = 142.0
margin_bottom = 111.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Camera2D/CanvasLayer/TitleScreen/NewGame"]
margin_right = 72.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 6 )
text = "NEW GAME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="Button" parent="Camera2D/CanvasLayer/TitleScreen"]
margin_left = 12.0
margin_top = 115.0
margin_right = 142.0
margin_bottom = 135.0
flat = true

[node name="Label" type="Label" parent="Camera2D/CanvasLayer/TitleScreen/Continue"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 6 )
text = "CONTINUE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level Select" type="Button" parent="Camera2D/CanvasLayer/TitleScreen"]
margin_left = 13.0
margin_top = 135.0
margin_right = 179.0
margin_bottom = 155.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Camera2D/CanvasLayer/TitleScreen/Level Select"]
margin_left = -3.0
margin_top = 4.0
margin_right = 189.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 6 )
text = "Level Select"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="TextureRect" parent="Camera2D/CanvasLayer/TitleScreen"]
margin_left = 175.159
margin_top = 16.0
margin_right = 687.159
margin_bottom = 528.0
rect_scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" parent="." instance=ExtResource( 4 )]

[node name="Sprite" parent="Background/PBG/TreesBack" index="0"]
position = Vector2( 0, -143 )

[node name="FrontRocks" parent="Background/PFG" index="1"]
z_index = 4

[node name="Ground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="Ground"]
motion_mirroring = Vector2( 480, 0 )

[node name="Sprite" type="Sprite" parent="Ground/ParallaxLayer"]
position = Vector2( 0, 132 )
texture = ExtResource( 2 )
centered = false
[connection signal="pressed" from="Camera2D/CanvasLayer/TitleScreen/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="Camera2D/CanvasLayer/TitleScreen/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="Camera2D/CanvasLayer/TitleScreen/Level Select" to="." method="_on_Level_Select_pressed"]

[editable path="Camera2D/CanvasLayer/Transition"]

[editable path="Background"]
